deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: talvra
  labels:
    name: talvra
